--- a/frontend/DBS/package.json
+++ b/frontend/DBS/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.6",
     "react": "18.2.0",
     "react-native": "0.71.10",
+    "react-native-pager-view": "^6.2.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-tab-view": "^3.5.1"
