--- a/frontend/DBS/package.json
+++ b/frontend/DBS/package.json
@@ -7,18 +7,21 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.10",
     "react-native-pager-view": "^6.2.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
-    "react-native-tab-view": "^3.5.1"
+    "react-native-tab-view": "^3.5.1",
+    "react-native-web": "^0.19.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,8 +37,11 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "react-scripts": "^5.0.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
   },
   "jest": {
     "preset": "react-native"
