--- a/frontend-webapp/DBS/package.json
+++ b/frontend-webapp/DBS/package.json
@@ -14,6 +14,7 @@
     "react-native": "^0.71.11",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "^0.19.5",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
