--- a/backend-webapp/DBS-backend/Gemfile
+++ b/backend-webapp/DBS-backend/Gemfile
@@ -49,14 +49,21 @@ gem "bootsnap", require: false
 # gem "image_processing", "~> 1.2"
 
 gem 'rack-cors'
+
+
+group :production do
+  #gem 'pg', '~> 0.21' # for gcloud deployment
+end
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
+  
 end
 
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "web-console"
+  
 
   # Add speed badges [https://github.com/MiniProfiler/rack-mini-profiler]
   # gem "rack-mini-profiler"
