--- a/frontend-webapp/DBS/package.json
+++ b/frontend-webapp/DBS/package.json
@@ -2,7 +2,6 @@
   "name": "kopilo",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "Link to gcloud",
   "dependencies": {
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -18,10 +17,11 @@
     "react-native-web": "^0.19.5",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
-    "start": "set PORT=4000 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
