--- a/backend-webapp/DBS-backend/Gemfile
+++ b/backend-webapp/DBS-backend/Gemfile
@@ -52,7 +52,7 @@ gem 'rack-cors'
 
 
 group :production do
-  #gem 'pg', '~> 0.21' # for gcloud deployment
+  gem 'pg', '~> 0.21' # for gcloud deployment
 end
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
