--- a/frontend-webapp/DBS/package.json
+++ b/frontend-webapp/DBS/package.json
@@ -3,22 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cucumber/cucumber":"^9.1.1",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "axios": "^1.4.0",
-    "@types/cucumber": "^7.0.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
-    "cucumber-html-reporter": "^7.1.0",
-    "jsdom-global": "^3.0.2",
-    "axios": "^1.4.0",
-    "@types/cucumber": "^7.0.0",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1",
+    "chromedriver": "^114.0.2",
     "cucumber-html-reporter": "^7.1.0",
     "jsdom-global": "^3.0.2",
     "react": "^18.2.0",
@@ -27,10 +22,11 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "^0.19.5",
     "react-router-dom": "^6.13.0",
-    "ts-node": "^10.9.1",
+    "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.5",
+    "selenium-webdriver": "^4.10.0",
     "ts-node": "^10.9.1",
     "web-vitals": "^2.1.4",
-    "webfontloader": "^1.6.28",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
@@ -38,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:cucumber": "cucumber-js features/f1.feature --require features/step_definitions.js"
+    "test:cucumber": "npc cucumber-js"
   },
   "eslintConfig": {
     "extends": [
@@ -58,42 +54,24 @@
       "last 1 safari version"
     ]
   },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
-    "@babel/register": "^7.22.5",
     "@cucumber/cucumber": "^9.1.2",
-    "cucumber": "^6.0.7",
-    "cucumber-jest": "^0.3.1",
-    "jest": "^27.5.1",
-    "react-cucumber": "^1.0.7",
-    "react-scripts": "^5.0.1"
+    "babel-jest": "^29.5.0"
   },
   "jest": {
-    "preset": "react-scripts",
-    "testMatch": [
-      "**/__tests__/**/*.js?(x)",
-      "**/?(*.)+(spec|test).js?(x)"
-    ],
-    "testRunner": "cucumber-jest"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/register": "^7.22.5",
-    "@cucumber/cucumber": "^9.1.2",
-    "cucumber": "^6.0.7",
-    "cucumber-jest": "^0.3.1",
-    "jest": "^27.5.1",
-    "react-cucumber": "^1.0.7",
-    "react-scripts": "^5.0.1"
-  },
-  "jest": {
-    "preset": "react-scripts",
-    "testMatch": [
-      "**/__tests__/**/*.js?(x)",
-      "**/?(*.)+(spec|test).js?(x)"
-    ],
-    "testRunner": "cucumber-jest"
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
