--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -21,6 +21,11 @@ jobs:
       with:
         ruby-version: 3.2.2
 
+    - name: Set up Node.js 16
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16
+
     - name: Bundle install
       run: |
         gem install bundler
