trying automatic rspec testing attempt 4

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -28,6 +28,7 @@ jobs:
 
     - name: Bundle install
       run: |
+        cd backend-webapp/DBS-backend
         gem install bundler
         bundle install
 
