--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -33,4 +33,6 @@ jobs:
         bundle install
 
     - name: Run RSpec tests
-      run: bundle exec rspec spec/models/dispute_spec.rb spec/models/paynow_spec.rb
+      run: |
+        cd backend-webapp/DBS-backend
+        bundle exec rspec spec/models/dispute_spec.rb spec/models/paynow_spec.rb
