--- a/frontend-webapp/DBS/package.json
+++ b/frontend-webapp/DBS/package.json
@@ -14,10 +14,12 @@
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
     "chromedriver": "^114.0.2",
+    "clipboardy": "^3.0.0",
     "cucumber-html-reporter": "^7.1.0",
     "fuse.js": "^6.6.2",
     "jsdom-global": "^3.0.2",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.71.11",
     "react-native-tab-view": "^3.5.1",
