--- a/frontend-webapp/DBS/package.json
+++ b/frontend-webapp/DBS/package.json
@@ -16,6 +16,7 @@
     "chromedriver": "^114.0.2",
     "chromedriver-html5-dragdrop": "^0.3.1",
     "cucumber-html-reporter": "^7.1.0",
+    "cypress": "^12.17.3",
     "fuse.js": "^6.6.2",
     "jsdom-global": "^3.0.2",
     "react": "^18.2.0",
