--- a/frontend-webapp/DBS/package.json
+++ b/frontend-webapp/DBS/package.json
@@ -24,6 +24,7 @@
     "react-native": "^0.71.11",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "^0.19.5",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.5",
     "selenium-webdriver": "^4.10.0",
