--- a/frontend-webapp/DBS/package.json
+++ b/frontend-webapp/DBS/package.json
@@ -16,6 +16,7 @@
     "chromedriver-html5-dragdrop": "^0.3.1",
     "cucumber": "^6.0.7",
     "cucumber-html-reporter": "^7.1.0",
+    "cypress": "^12.17.3",
     "fuse.js": "^6.6.2",
     "jsdom-global": "^3.0.2",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-native": "^0.71.11",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "^0.19.5",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.5",
     "selenium-webdriver": "^4.10.0",
